# Netology

Asinc/Asinc_1/: Asinc_1.sln
Asinc/Asinc_2/: Asinc_2.sln
Best_Crauler/: .gitignore  README.md
Best_Crauler/Finder/: CMakeLists.txt  index.html  main.cpp  styles.css
Best_Crauler/Spider/: configuration.ini
CMake/: CMakeLists.txt  my_first_cmake_program.cpp
Catch2Task/: Catch2Task.sln
Catch2Task/Catch2Task/: CMakeLists.txt  Catch2Task.cpp  Catch2Task.vcxproj  Catch2Task.vcxproj.filters
Classes_and_objects/: Calculator.cpp  Counter.cpp
Crauler/: .gitignore  CMakeLists.txt  config.ini
Crauler/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Crauler/.github/workflows/: build.yml
Crauler/include/: config.h  database.h  search_engine.h  spider.h
Crauler/src/: config.cpp  database.cpp  search_engine.cpp  spider.cpp
CreateDB/: Task1.txt
Docker/Docker_1/: Dockerfile  test.cpp
Exceptions_and_errors/Exceptions_in_constructors/: Exceptions_in_constructors.sln
Exceptions_and_errors/Simple_exception/: Simple_exception.sln
Multithread/ParallelComputings/: CMakeLists.txt  main.cpp
Multithread/Queue/: CMakeLists.txt  main.cpp
OOP/Adresses/: Adresses.sln
ORM/: ORM.sln
PostgreC++/: CMakeLists.txt  CPPSQL7_4.cpp  MySQL.cpp  MySQL.h
SQL/: Create.sql  insert.sql  select.sql
STL1/: Task_1.cpp  Task_2.cpp
STL2/: STL2.sln
Smart_array/: Task 1 array.cpp  Task 1.cpp  Task 2 — копия.cpp  Task 2.cpp
Smart_ptr/: task1.cpp  task2.cpp
Structures_and_enumerations/: adress.cpp  balance.cpp  months.cpp
Testing/: Testing.sln
(+284 files in other folders)
